<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">101 Okey Yazboz</string>
    <string name="tag" translatable="false">Tag</string>
    <string name="date" tools:ignore="MissingTranslation">Tarih</string>
    <string name="save" tools:ignore="MissingTranslation">Oyunu kaydet</string>
    <string name="todo" tools:ignore="MissingTranslation">TODO</string>
    <string name="game_info" tools:ignore="MissingTranslation">Oyun bilgi</string>
    <string name="game_detail" tools:ignore="MissingTranslation">Oyun detay</string>
    <string name="enter_player1_name" tools:ignore="MissingTranslation">1. oyuncu için isim giriniz</string>
    <string name="enter_player2_name" tools:ignore="MissingTranslation">2. oyuncu için isim giriniz</string>
    <string name="enter_player3_name" tools:ignore="MissingTranslation">3. oyuncu için isim giriniz</string>
    <string name="enter_player4_name" tools:ignore="MissingTranslation">4. oyuncu için isim giriniz</string>
    <string name="new_round" tools:ignore="MissingTranslation">Yeni Tur</string>
    <string name="save_names" tools:ignore="MissingTranslation">İsimleri kaydet</string>
    <string name="enter_team1_name" tools:ignore="MissingTranslation">1. takım için isim giriniz</string>
    <string name="enter_team2_name" tools:ignore="MissingTranslation">2. takım için isim giriniz</string>
    <string name="partner_game" tools:ignore="MissingTranslation">Eşli oyun</string>
    <string name="single_game" tools:ignore="MissingTranslation">Tekli oyun</string>
    <string name="successful" tools:ignore="MissingTranslation">Başarılı</string>
    <string name="show_differences" tools:ignore="MissingTranslation">Farkları gör</string>
    <string-array name="tablayoutTitleArray" tools:ignore="MissingTranslation">
        <item>Tekli oyunlarım</item>
        <item>Eşli oyunlarım</item>
    </string-array>
    <string name="home" tools:ignore="MissingTranslation">Ana sayfa</string>
    <string name="past_games" tools:ignore="MissingTranslation">Geçmiş oyunlar</string>
    <string name="dark_mode" tools:ignore="MissingTranslation">Koyu mod</string>
    <string name="settings" tools:ignore="MissingTranslation">Ayarlar</string>
    <string name="language" tools:ignore="MissingTranslation">Dil</string>
    <string name="select_language" tools:ignore="MissingTranslation">Dil seçiniz</string>
    <string name="turkish" tools:ignore="MissingTranslation">Türkçe</string>
    <string name="english" tools:ignore="MissingTranslation">İngilizce</string>
    <string name="search_team_hint" tools:ignore="MissingTranslation">Aramak için bir tarih veya takım adı yazınız</string>
    <string name="search_player_hint" tools:ignore="MissingTranslation">Aramak için bir tarih veya oyuncu adı yazınız</string>
    <string name="confirmation_title" tools:ignore="MissingTranslation">İşlem Onayı</string>
    <string name="confirmation_message" tools:ignore="MissingTranslation">Oyunu kayıt etmek istiyor musunuz?</string>
    <string name="confirmation_yes" tools:ignore="MissingTranslation">Evet</string>
    <string name="confirmation_no" tools:ignore="MissingTranslation">Hayır</string>
    <string name="exit_confirmation_title" tools:ignore="MissingTranslation">Kaydetmeden çıkmak üzeresiniz</string>
    <string name="exit_confirmation_message" tools:ignore="MissingTranslation">Kaydetmeden çıkmak istiyor musunuz? Yaptığınız değişiklikler kaybolacak</string>
    <string name="exit_confirmation_yes" tools:ignore="MissingTranslation">Kaydetmeden çık"</string>
    <string name="exit_confirmation_no" tools:ignore="MissingTranslation">Vazgeç</string>
    <string name="warning_check_all_rounds" tools:ignore="MissingTranslation">Lütfen %d. turdaki tüm alanları doldurun</string>
    <string name="warning_select_player_penalised" tools:ignore="MissingTranslation">Lütfen ceza eklenecek oyuncuyu seçiniz</string>
    <string name="warning_select_player_value_penalised" tools:ignore="MissingTranslation">Lütfen cezayı belirleyiniz</string>
    <string name="warning_check_team_names" tools:ignore="MissingTranslation">Takım adı boş olamaz!</string>
    <string name="warning_same_players_names" tools:ignore="MissingTranslation">Oyuncu isimleri aynı olamaz, lütfen kontrol ediniz!</string>
    <string name="warning_check_team_player_1_name" tools:ignore="MissingTranslation">1. Oyuncu adı boş olamaz!</string>
    <string name="warning_check_team_player_2_name" tools:ignore="MissingTranslation">2. Oyuncu adı boş olamaz!</string>
    <string name="warning_check_selected_game" tools:ignore="MissingTranslation">Lütfen oyun türü seçiniz!</string>
    <string name="warning_successful_game_save" tools:ignore="MissingTranslation">Oyun başarıyla kaydedildi</string>
    <string name="score_difference" tools:ignore="MissingTranslation">%s ile %s skor farkı: %d</string>
    <string name="deleted" tools:ignore="MissingTranslation">Silindi</string>
    <string name="take_it_back" tools:ignore="MissingTranslation">Geri al</string>
    <string name="winning_team_info_text" tools:ignore="MissingTranslation">Kazanan takım: %s. Skor: %s</string>
    <string name="winning_team_info" tools:ignore="MissingTranslation">%s %s</string>
    <string name="winning_player_info_text" tools:ignore="MissingTranslation">Kazanan oyuncu %s. Skor: %s</string>
    <string name="winning_team_info_text2" tools:ignore="MissingTranslation">Kazanan takım: %s\nSkor: %s</string>
    <string name="winning_player_info_text2" tools:ignore="MissingTranslation">Kazanan oyuncu %s\nSkor: %s</string>
    <string name="winning_player_info" tools:ignore="MissingTranslation">%s %s</string>
    <string name="error_not_work_this_device" tools:ignore="MissingTranslation">Uygulama bu cihazda çalışmıyor.</string>
    <string name="enter_penalty" tools:ignore="MissingTranslation">Ceza giriniz</string>
    <string name="penalty" tools:ignore="MissingTranslation">Ceza</string>
    <string name="single_player_1" tools:ignore="MissingTranslation">Single Player 1</string>
    <string name="single_player_2" tools:ignore="MissingTranslation">Single Player 2</string>
    <string name="single_player_3" tools:ignore="MissingTranslation">Single Player 3</string>
    <string name="single_player_4" tools:ignore="MissingTranslation">Single Player 4</string>
    <string name="penalty_text" tools:ignore="MissingTranslation">Ceza: </string>
    <string name="penalty_text_value" tools:ignore="MissingTranslation">Ceza: %d</string>
    <string name="confirm" tools:ignore="MissingTranslation">Onayla</string>
    <string name="determine_punishment" tools:ignore="MissingTranslation">Cezayı belirleyin</string>
    <string name="select_player_punish" tools:ignore="MissingTranslation">Ceza eklenecek oyuncuyu seçiniz</string>
    <string name="forward" tools:ignore="MissingTranslation">İleri</string>
    <string name="input_score_hint" tools:ignore="MissingTranslation">Skor</string>
    <string name="update_failed" tools:ignore="MissingTranslation">Güncelleme başarısız!</string>

    <string name="validation_message_fill_all_player_names" tools:ignore="MissingTranslation">Lütfen tüm kullanıcı adlarını doldurun</string>
    <string name="validation_message_check_same_player_names" tools:ignore="MissingTranslation">Lütfen isimleri kontrol ediniz, aynı isim olamaz</string>
    <string name="round_count" tools:ignore="MissingTranslation">Tur %d</string>
    <string name="default_total_score_value" tools:ignore="MissingTranslation">0</string>
    <string name="score_entry_title" tools:ignore="MissingTranslation">Skor girişi</string>
    <string name="create_partner_game_button_text" tools:ignore="MissingTranslation">Eşli oyun oluştur</string>
    <string name="create_single_game_button_text" tools:ignore="MissingTranslation">Tekli oyun oluştur</string>
    <string name="team_1_names_save_button_text" tools:ignore="MissingTranslation">1. takım kayıt</string>
    <string name="team_2_names_save_button_text" tools:ignore="MissingTranslation">2. takım kayıt</string>
    <string name="round_1_text" tools:ignore="MissingTranslation">Tur 1</string>
    <string name="team_total_score_text" tools:ignore="MissingTranslation">Toplam: %d</string>
    <string name="player_scores_title" tools:ignore="MissingTranslation">Oyuncu skorları</string>
    <string name="team_scores_title" tools:ignore="MissingTranslation">Takım skorları</string>
    <string name="splash_logo_text" tools:ignore="MissingTranslation">Yükleniyor%s</string>
    <string name="choose_game_enter_text" tools:ignore="MissingTranslation">Başla</string>
    <string name="language_dialog_search_text" tools:ignore="MissingTranslation">Ara</string>

    <string name="onboarding_title_1" tools:ignore="MissingTranslation">Oyun türünü seç</string>
    <string name="onboarding_description_1" tools:ignore="MissingTranslation">Tekli veya eşli oyun türlerinden birini seçin.</string>
    <string name="onboarding_title_2" tools:ignore="MissingTranslation">Skorlarını gir</string>
    <string name="onboarding_description_2" tools:ignore="MissingTranslation">Tur skorlarını girin ve canlı sonuçları görüntüleyin.</string>
    <string name="onboarding_title_3" tools:ignore="MissingTranslation">Skorları kaydet</string>
    <string name="onboarding_description_3" tools:ignore="MissingTranslation">Tüm tur skorlarını kaydedin.</string>
    <string name="onboarding_title_4" tools:ignore="MissingTranslation">Kaydedilen oyunları görüntüle</string>
    <string name="onboarding_description_4" tools:ignore="MissingTranslation">Kaydedilen oyunları görüntüleyin. Detay ekranında tur skorlarını ve kazanını görüntüleyin</string>
    <string name="onboarding_next_button_text" tools:ignore="MissingTranslation">İlerle</string>
    <string name="onboarding_next_finish_button_text" tools:ignore="MissingTranslation">Başla</string>
    <string name="onboarding_previous_button_text" tools:ignore="MissingTranslation">Geri</string>
    <string name="choice_text" tools:ignore="MissingTranslation">Seçim</string>

</resources>
