<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/cardview_background_color"
    app:cardCornerRadius="@dimen/card_radius_large">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_background_color"
        android:padding="@dimen/padding_large">

        <TextView
            android:id="@+id/playerAddPenaltyTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:text="@string/select_player_punish"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/singlePlayersRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playerAddPenaltyTitle">

            <RadioButton
                android:id="@+id/player1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/single_player_1" />

            <RadioButton
                android:id="@+id/player2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/single_player_2" />

            <RadioButton
                android:id="@+id/player3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/single_player_3" />

            <RadioButton
                android:id="@+id/player4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/single_player_4" />
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_small"
            android:text="@string/forward"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:cornerRadius="@dimen/card_radius_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/singlePlayersRadioGroup" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
