<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/cardview_background_color"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_background_color"
        android:padding="16dp">

        <TextView
            android:id="@+id/penaltyValueTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/determine_punishment"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/penalty"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@null"
            android:hint="@string/enter_penalty"
            android:inputType="number"
            android:maxLength="4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/penaltyValueTitle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/penalty" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
