<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cardview_background_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/primary_color"
        android:gravity="center_vertical"

        android:orientation="horizontal"
        android:paddingStart="@dimen/padding_large"
        android:paddingEnd="@dimen/padding_large">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_language"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="@dimen/margin_medium"
        android:background="@drawable/searchview_border"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_search"
            app:tint="#999999" />

        <EditText
            android:id="@+id/search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/language_dialog_search_text"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColorHint="#999999"
            android:textSize="@dimen/text_size_medium" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/languagesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small" />

</LinearLayout>