<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.finishedPartnerGame.FinishedPartnerGameFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/goToSaveSingleGameFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:outlineSpotShadowColor="@color/cardview_shadow_color"
        app:cardBackgroundColor="@color/cardview_background_color"
        app:cardCornerRadius="16dp"
        app:cardElevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="28">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/icon1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/header_icon_style"
                android:backgroundTint="#E53935"
                android:contentDescription="@string/todo"
                android:padding="12dp"
                android:src="@drawable/ic_team_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="Eşli oyun"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/icon1"
                app:layout_constraintTop_toTopOf="@+id/icon1" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/searchview_border"
        android:layoutDirection="rtl"
        app:closeIcon="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goToSaveSingleGameFragment"
        app:queryHint="@string/search_team_hint"
        app:searchHintIcon="@drawable/ic_search"
        app:searchIcon="@drawable/ic_search"
        app:theme="@style/SearchViewStyle"
        app:tint="@color/searchview_text_color" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/finishedGameRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView" />
    </ScrollView>

    <Button
        android:id="@+id/createPartnerGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/custom_button"
        android:paddingHorizontal="32dp"
        android:text="@string/create_partner_game_button_text"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recordNotFoundImage" />

    <ImageView
        android:id="@+id/recordNotFoundImage"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/illustration_no_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

</androidx.constraintlayout.widget.ConstraintLayout>

